testbed/microservice_replication/framework/netpol-yaml-templates/netpol-template-selector3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-template-selector3
  namespace: attack-graphs
spec:
  podSelector:
    matchLabels:
      app: app0
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: app1
    - podSelector:
        matchLabels:
          app: app2
    - podSelector:
        matchLabels:
          app: app3
    ports:
      - port: 0
